analysis/myanalyzer.output
Nonterminals useless in grammar

    comp_operand


Terminals unused in grammar

    PERIOD


Rules useless in grammar

  168 comp_operand: comp_var_name
  169             | comp_func_call
  170             | INTEGER
  171             | FLOAT
  172             | bool_dt
  173             | CONST_STRING


State 336 conflicts: 16 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: comp_decl_rec const_decl_rec var_decl_rec func_decl_rec main_func

    2 func_decl_rec: ε
    3              | func_decl_rec func_decl

    4 var_decl_rec: ε
    5             | var_decl_rec var_decl

    6 const_decl_rec: ε
    7               | const_decl_rec const_decl

    8 comp_decl_rec: ε
    9              | comp_decl_rec comp_decl

   10 main_func: main_header func_body func_end

   11 main_header: KEYWORD_DEF KEYWORD_MAIN LPAREN RPAREN COLON

   12 func_decl: func_header func_body func_end

   13 func_header: KEYWORD_DEF IDENTIFIER LPAREN func_param_list RPAREN COLON
   14            | KEYWORD_DEF IDENTIFIER LPAREN func_param_list RPAREN MINUS GT var_type COLON

   15 func_param_list: ε
   16                | func_arg
   17                | func_param_list COMMA func_arg

   18 func_arg: func_arg_name COLON var_type

   19 func_arg_name: IDENTIFIER
   20              | IDENTIFIER LBRACKET RBRACKET

   21 func_body: const_decl_rec var_decl_rec stmts

   22 func_end: KEYWORD_ENDDEF SEMICOLON

   23 var_decl: var_decl_list COLON var_type SEMICOLON

   24 var_decl_list: var_name
   25              | var_decl_list COMMA var_name

   26 var_name: IDENTIFIER
   27         | IDENTIFIER LBRACKET expr RBRACKET

   28 var_type: primitive_dt
   29         | IDENTIFIER

   30 primitive_dt: KEYWORD_SCALAR
   31             | KEYWORD_INTEGER
   32             | KEYWORD_STR
   33             | KEYWORD_BOOL

   34 bool_dt: KEYWORD_TRUE
   35        | KEYWORD_FALSE

   36 comp_decl: KEYWORD_COMP IDENTIFIER COLON comp_var_decl_rec comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON

   37 comp_func_decl_rec: ε
   38                   | comp_func_decl_rec comp_func_decl

   39 comp_func_decl: comp_func_header comp_func_body func_end

   40 comp_func_body: const_decl_rec var_decl_rec comp_stmts

   41 comp_func_header: KEYWORD_DEF IDENTIFIER LPAREN comp_func_param_list RPAREN COLON
   42                 | KEYWORD_DEF IDENTIFIER LPAREN comp_func_param_list RPAREN MINUS GT var_type COLON

   43 comp_func_param_list: ε
   44                     | func_arg
   45                     | comp_func_param_list COMMA func_arg

   46 comp_var_decl_rec: comp_var_decl
   47                  | comp_var_decl_rec comp_var_decl

   48 comp_var_decl: comp_var_decl_list COLON var_type SEMICOLON

   49 comp_var_decl_list: comp_var_name_
   50                   | comp_var_decl_list COMMA comp_var_name_

   51 comp_var_name_: HASHTAG var_name

   52 comp_var_name: HASHTAG var_name
   53              | var_name

   54 comp_stmts: comp_stmt
   55           | comp_stmts comp_stmt

   56 comp_stmt: empty_stmt
   57          | comp_if_stmt
   58          | comp_func_call SEMICOLON
   59          | comp_return_stmt
   60          | break_stmt
   61          | continue_stmt
   62          | comp_while_stmt
   63          | comp_for_stmt
   64          | comp_assign_stmt
   65          | comp_range_comprehension
   66          | comp_arr_comprehension

   67 comp_range_comprehension: comp_var_name COLON_ASSIGN LBRACKET comp_expr KEYWORD_FOR comp_var_name COLON INTEGER RBRACKET COLON var_type SEMICOLON

   68 comp_arr_comprehension: comp_var_name COLON_ASSIGN LBRACKET comp_expr KEYWORD_FOR comp_var_name COLON var_type KEYWORD_IN comp_var_name KEYWORD_OF INTEGER RBRACKET COLON var_type SEMICOLON

   69 comp_for_stmt: KEYWORD_FOR comp_var_name KEYWORD_IN LBRACKET comp_expr COLON comp_expr COLON comp_expr RBRACKET COLON comp_stmts KEYWORD_ENDFOR SEMICOLON
   70              | KEYWORD_FOR comp_var_name KEYWORD_IN LBRACKET expr COLON expr RBRACKET COLON stmts KEYWORD_ENDFOR SEMICOLON

   71 comp_while_stmt: KEYWORD_WHILE LPAREN comp_expr RPAREN COLON comp_stmts KEYWORD_ENDWHILE SEMICOLON

   72 comp_assign_stmt: comp_var_name ASSIGN comp_expr SEMICOLON
   73                 | comp_var_name PLUS_ASSIGN comp_expr SEMICOLON
   74                 | comp_var_name MINUS_ASSIGN comp_expr SEMICOLON
   75                 | comp_var_name MULT_ASSIGN comp_expr SEMICOLON
   76                 | comp_var_name DIV_ASSIGN comp_expr SEMICOLON
   77                 | comp_var_name MOD_ASSIGN comp_expr SEMICOLON
   78                 | comp_var_name COLON_ASSIGN comp_expr SEMICOLON

   79 comp_return_stmt: KEYWORD_RETURN SEMICOLON
   80                 | KEYWORD_RETURN comp_expr SEMICOLON

   81 comp_if_stmt: KEYWORD_IF LPAREN comp_expr RPAREN COLON comp_stmts KEYWORD_ENDIF SEMICOLON
   82             | KEYWORD_IF LPAREN comp_expr RPAREN COLON comp_stmts KEYWORD_ELSE COLON comp_stmts KEYWORD_ENDIF SEMICOLON

   83 comp_func_call: comp_var_name LPAREN comp_expr_list RPAREN

   84 comp_expr_list: ε
   85               | comp_expr
   86               | comp_expr_list COMMA comp_expr

   87 comp_expr: operand
   88          | comp_expr PLUS comp_expr
   89          | comp_expr MINUS comp_expr
   90          | comp_expr MULT comp_expr
   91          | comp_expr DIV comp_expr
   92          | comp_expr MOD comp_expr
   93          | comp_expr GT comp_expr
   94          | comp_expr LT comp_expr
   95          | comp_expr GEQ comp_expr
   96          | comp_expr LEQ comp_expr
   97          | comp_expr EQ comp_expr
   98          | comp_expr NEQ comp_expr
   99          | comp_expr KEYWORD_AND comp_expr
  100          | comp_expr KEYWORD_OR comp_expr
  101          | KEYWORD_NOT comp_expr
  102          | PLUS comp_expr
  103          | MINUS comp_expr
  104          | comp_expr POW comp_expr
  105          | LPAREN comp_expr RPAREN

  106 const_decl: KEYWORD_CONST IDENTIFIER ASSIGN expr COLON primitive_dt SEMICOLON

  107 expr: operand
  108     | expr PLUS expr
  109     | expr MINUS expr
  110     | expr MULT expr
  111     | expr DIV expr
  112     | expr MOD expr
  113     | expr GT expr
  114     | expr LT expr
  115     | expr GEQ expr
  116     | expr LEQ expr
  117     | expr EQ expr
  118     | expr NEQ expr
  119     | expr KEYWORD_AND expr
  120     | expr KEYWORD_OR expr
  121     | KEYWORD_NOT expr
  122     | PLUS expr
  123     | MINUS expr
  124     | expr POW expr
  125     | LPAREN expr RPAREN

  126 operand: var_name
  127        | func_call
  128        | INTEGER
  129        | FLOAT
  130        | bool_dt
  131        | CONST_STRING

  132 expr_list: ε
  133          | expr
  134          | expr_list COMMA expr

  135 stmts: stmt
  136      | stmts stmt

  137 stmt: empty_stmt
  138     | if_stmt
  139     | func_call SEMICOLON
  140     | return_stmt
  141     | break_stmt
  142     | continue_stmt
  143     | while_stmt
  144     | for_stmt
  145     | assign_stmt
  146     | range_comprehension
  147     | arr_comprehension

  148 range_comprehension: var_name COLON_ASSIGN LBRACKET expr KEYWORD_FOR var_name COLON INTEGER RBRACKET COLON var_type SEMICOLON

  149 arr_comprehension: var_name COLON_ASSIGN LBRACKET expr KEYWORD_FOR var_name COLON var_type KEYWORD_IN var_name KEYWORD_OF INTEGER RBRACKET COLON var_type SEMICOLON

  150 for_stmt: KEYWORD_FOR var_name KEYWORD_IN LBRACKET expr COLON expr COLON expr RBRACKET COLON stmts KEYWORD_ENDFOR SEMICOLON
  151         | KEYWORD_FOR var_name KEYWORD_IN LBRACKET expr COLON expr RBRACKET COLON stmts KEYWORD_ENDFOR SEMICOLON

  152 while_stmt: KEYWORD_WHILE LPAREN expr RPAREN COLON stmts KEYWORD_ENDWHILE SEMICOLON

  153 assign_stmt: var_name ASSIGN expr SEMICOLON
  154            | var_name PLUS_ASSIGN expr SEMICOLON
  155            | var_name MINUS_ASSIGN expr SEMICOLON
  156            | var_name MULT_ASSIGN expr SEMICOLON
  157            | var_name DIV_ASSIGN expr SEMICOLON
  158            | var_name MOD_ASSIGN expr SEMICOLON
  159            | var_name COLON_ASSIGN expr SEMICOLON

  160 return_stmt: KEYWORD_RETURN SEMICOLON
  161            | KEYWORD_RETURN expr SEMICOLON

  162 break_stmt: KEYWORD_BREAK SEMICOLON

  163 continue_stmt: KEYWORD_CONTINUE SEMICOLON

  164 empty_stmt: SEMICOLON

  165 if_stmt: KEYWORD_IF LPAREN expr RPAREN COLON stmts KEYWORD_ENDIF SEMICOLON
  166        | KEYWORD_IF LPAREN expr RPAREN COLON stmts KEYWORD_ELSE COLON stmts KEYWORD_ENDIF SEMICOLON

  167 func_call: IDENTIFIER LPAREN expr_list RPAREN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    KEYWORD_SCALAR (258) 30
    KEYWORD_STR (259) 32
    KEYWORD_BOOL (260) 33
    KEYWORD_TRUE (261) 34
    KEYWORD_FALSE (262) 35
    KEYWORD_CONST (263) 106
    KEYWORD_IF (264) 81 82 165 166
    KEYWORD_ELSE (265) 82 166
    KEYWORD_ENDIF (266) 81 82 165 166
    KEYWORD_FOR (267) 67 68 69 70 148 149 150 151
    KEYWORD_IN (268) 68 69 70 149 150 151
    KEYWORD_ENDFOR (269) 69 70 150 151
    KEYWORD_WHILE (270) 71 152
    KEYWORD_ENDWHILE (271) 71 152
    KEYWORD_BREAK (272) 162
    KEYWORD_CONTINUE (273) 163
    KEYWORD_NOT (274) 101 121
    KEYWORD_AND (275) 99 119
    KEYWORD_OR (276) 100 120
    KEYWORD_DEF (277) 11 13 14 41 42
    KEYWORD_ENDDEF (278) 22
    KEYWORD_MAIN (279) 11
    KEYWORD_RETURN (280) 79 80 160 161
    KEYWORD_COMP (281) 36
    KEYWORD_ENDCOMP (282) 36
    KEYWORD_OF (283) 68 149
    KEYWORD_INTEGER (284) 31
    LPAREN (285) 11 13 14 41 42 71 81 82 83 105 125 152 165 166 167
    RPAREN (286) 11 13 14 41 42 71 81 82 83 105 125 152 165 166 167
    COMMA (287) 17 25 45 50 86 134
    LBRACKET (288) 20 27 67 68 69 70 148 149 150 151
    RBRACKET (289) 20 27 67 68 69 70 148 149 150 151
    COLON (290) 11 13 14 18 23 36 41 42 48 67 68 69 70 71 81 82 106 148 149 150 151 152 165 166
    PERIOD (291)
    SEMICOLON (292) 22 23 36 48 58 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 106 139 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166
    PLUS (293) 88 102 108 122
    MINUS (294) 14 42 89 103 109 123
    MULT (295) 90 110
    DIV (296) 91 111
    MOD (297) 92 112
    POW (298) 104 124
    EQ (299) 97 117
    NEQ (300) 98 118
    LT (301) 94 114
    LEQ (302) 96 116
    GT (303) 14 42 93 113
    GEQ (304) 95 115
    ASSIGN (305) 72 106 153
    PLUS_ASSIGN (306) 73 154
    MINUS_ASSIGN (307) 74 155
    MULT_ASSIGN (308) 75 156
    DIV_ASSIGN (309) 76 157
    MOD_ASSIGN (310) 77 158
    COLON_ASSIGN (311) 67 68 78 148 149 159
    IDENTIFIER <str> (312) 13 14 19 20 26 27 29 36 41 42 106 167
    INTEGER <str> (313) 67 68 128 148 149
    FLOAT <str> (314) 129
    CONST_STRING <str> (315) 131
    HASHTAG (316) 51 52


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    input (63)
        on left: 1
        on right: 0
    func_decl_rec <str> (64)
        on left: 2 3
        on right: 1 3
    var_decl_rec <str> (65)
        on left: 4 5
        on right: 1 5 21 40
    const_decl_rec <str> (66)
        on left: 6 7
        on right: 1 7 21 40
    comp_decl_rec <str> (67)
        on left: 8 9
        on right: 1 9
    main_func <str> (68)
        on left: 10
        on right: 1
    main_header <str> (69)
        on left: 11
        on right: 10
    func_decl <str> (70)
        on left: 12
        on right: 3
    func_header <str> (71)
        on left: 13 14
        on right: 12
    func_param_list <str> (72)
        on left: 15 16 17
        on right: 13 14 17
    func_arg <str> (73)
        on left: 18
        on right: 16 17 44 45
    func_arg_name <str> (74)
        on left: 19 20
        on right: 18
    func_body <str> (75)
        on left: 21
        on right: 10 12
    func_end <str> (76)
        on left: 22
        on right: 10 12 39
    var_decl <str> (77)
        on left: 23
        on right: 5
    var_decl_list <str> (78)
        on left: 24 25
        on right: 23 25
    var_name <str> (79)
        on left: 26 27
        on right: 24 25 51 52 53 126 148 149 150 151 153 154 155 156 157 158 159
    var_type <str> (80)
        on left: 28 29
        on right: 14 18 23 42 48 67 68 148 149
    primitive_dt <str> (81)
        on left: 30 31 32 33
        on right: 28 106
    bool_dt <str> (82)
        on left: 34 35
        on right: 130
    comp_decl <str> (83)
        on left: 36
        on right: 9
    comp_func_decl_rec <str> (84)
        on left: 37 38
        on right: 36 38
    comp_func_decl <str> (85)
        on left: 39
        on right: 38
    comp_func_body <str> (86)
        on left: 40
        on right: 39
    comp_func_header <str> (87)
        on left: 41 42
        on right: 39
    comp_func_param_list <str> (88)
        on left: 43 44 45
        on right: 41 42 45
    comp_var_decl_rec <str> (89)
        on left: 46 47
        on right: 36 47
    comp_var_decl <str> (90)
        on left: 48
        on right: 46 47
    comp_var_decl_list <str> (91)
        on left: 49 50
        on right: 48 50
    comp_var_name_ <str> (92)
        on left: 51
        on right: 49 50
    comp_var_name <str> (93)
        on left: 52 53
        on right: 67 68 69 70 72 73 74 75 76 77 78 83
    comp_stmts <str> (94)
        on left: 54 55
        on right: 40 55 69 71 81 82
    comp_stmt <str> (95)
        on left: 56 57 58 59 60 61 62 63 64 65 66
        on right: 54 55
    comp_range_comprehension <str> (96)
        on left: 67
        on right: 65
    comp_arr_comprehension <str> (97)
        on left: 68
        on right: 66
    comp_for_stmt <str> (98)
        on left: 69 70
        on right: 63
    comp_while_stmt <str> (99)
        on left: 71
        on right: 62
    comp_assign_stmt <str> (100)
        on left: 72 73 74 75 76 77 78
        on right: 64
    comp_return_stmt <str> (101)
        on left: 79 80
        on right: 59
    comp_if_stmt <str> (102)
        on left: 81 82
        on right: 57
    comp_func_call <str> (103)
        on left: 83
        on right: 58
    comp_expr_list <str> (104)
        on left: 84 85 86
        on right: 83 86
    comp_expr <str> (105)
        on left: 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 67 68 69 71 72 73 74 75 76 77 78 80 81 82 85 86 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    const_decl <str> (106)
        on left: 106
        on right: 7
    expr <str> (107)
        on left: 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125
        on right: 27 70 106 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 133 134 148 149 150 151 152 153 154 155 156 157 158 159 161 165 166
    operand <str> (108)
        on left: 126 127 128 129 130 131
        on right: 87 107
    expr_list <str> (109)
        on left: 132 133 134
        on right: 134 167
    stmts <str> (110)
        on left: 135 136
        on right: 21 70 136 150 151 152 165 166
    stmt <str> (111)
        on left: 137 138 139 140 141 142 143 144 145 146 147
        on right: 135 136
    range_comprehension <str> (112)
        on left: 148
        on right: 146
    arr_comprehension <str> (113)
        on left: 149
        on right: 147
    for_stmt <str> (114)
        on left: 150 151
        on right: 144
    while_stmt <str> (115)
        on left: 152
        on right: 143
    assign_stmt <str> (116)
        on left: 153 154 155 156 157 158 159
        on right: 145
    return_stmt <str> (117)
        on left: 160 161
        on right: 140
    break_stmt <str> (118)
        on left: 162
        on right: 60 141
    continue_stmt <str> (119)
        on left: 163
        on right: 61 142
    empty_stmt <str> (120)
        on left: 164
        on right: 56 137
    if_stmt <str> (121)
        on left: 165 166
        on right: 138
    func_call <str> (122)
        on left: 167
        on right: 127 139


State 0

    0 $accept: • input $end
    1 input: • comp_decl_rec const_decl_rec var_decl_rec func_decl_rec main_func
    8 comp_decl_rec: ε •
    9              | • comp_decl_rec comp_decl

    $default  reduce using rule 8 (comp_decl_rec)

    input          go to state 1
    comp_decl_rec  go to state 2


State 1

    0 $accept: input • $end

    $end  shift, and go to state 3


State 2

    1 input: comp_decl_rec • const_decl_rec var_decl_rec func_decl_rec main_func
    6 const_decl_rec: ε •  [KEYWORD_CONST, KEYWORD_DEF, IDENTIFIER]
    7               | • const_decl_rec const_decl
    9 comp_decl_rec: comp_decl_rec • comp_decl
   36 comp_decl: • KEYWORD_COMP IDENTIFIER COLON comp_var_decl_rec comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON

    KEYWORD_COMP  shift, and go to state 4

    $default  reduce using rule 6 (const_decl_rec)

    const_decl_rec  go to state 5
    comp_decl       go to state 6


State 3

    0 $accept: input $end •

    $default  accept


State 4

   36 comp_decl: KEYWORD_COMP • IDENTIFIER COLON comp_var_decl_rec comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON

    IDENTIFIER  shift, and go to state 7


State 5

    1 input: comp_decl_rec const_decl_rec • var_decl_rec func_decl_rec main_func
    4 var_decl_rec: ε •  [KEYWORD_DEF, IDENTIFIER]
    5             | • var_decl_rec var_decl
    7 const_decl_rec: const_decl_rec • const_decl
  106 const_decl: • KEYWORD_CONST IDENTIFIER ASSIGN expr COLON primitive_dt SEMICOLON

    KEYWORD_CONST  shift, and go to state 8

    $default  reduce using rule 4 (var_decl_rec)

    var_decl_rec  go to state 9
    const_decl    go to state 10


State 6

    9 comp_decl_rec: comp_decl_rec comp_decl •

    $default  reduce using rule 9 (comp_decl_rec)


State 7

   36 comp_decl: KEYWORD_COMP IDENTIFIER • COLON comp_var_decl_rec comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON

    COLON  shift, and go to state 11


State 8

  106 const_decl: KEYWORD_CONST • IDENTIFIER ASSIGN expr COLON primitive_dt SEMICOLON

    IDENTIFIER  shift, and go to state 12


State 9

    1 input: comp_decl_rec const_decl_rec var_decl_rec • func_decl_rec main_func
    2 func_decl_rec: ε •  [KEYWORD_DEF]
    3              | • func_decl_rec func_decl
    5 var_decl_rec: var_decl_rec • var_decl
   23 var_decl: • var_decl_list COLON var_type SEMICOLON
   24 var_decl_list: • var_name
   25              | • var_decl_list COMMA var_name
   26 var_name: • IDENTIFIER
   27         | • IDENTIFIER LBRACKET expr RBRACKET

    IDENTIFIER  shift, and go to state 13

    $default  reduce using rule 2 (func_decl_rec)

    func_decl_rec  go to state 14
    var_decl       go to state 15
    var_decl_list  go to state 16
    var_name       go to state 17


State 10

    7 const_decl_rec: const_decl_rec const_decl •

    $default  reduce using rule 7 (const_decl_rec)


State 11

   36 comp_decl: KEYWORD_COMP IDENTIFIER COLON • comp_var_decl_rec comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON
   46 comp_var_decl_rec: • comp_var_decl
   47                  | • comp_var_decl_rec comp_var_decl
   48 comp_var_decl: • comp_var_decl_list COLON var_type SEMICOLON
   49 comp_var_decl_list: • comp_var_name_
   50                   | • comp_var_decl_list COMMA comp_var_name_
   51 comp_var_name_: • HASHTAG var_name

    HASHTAG  shift, and go to state 18

    comp_var_decl_rec   go to state 19
    comp_var_decl       go to state 20
    comp_var_decl_list  go to state 21
    comp_var_name_      go to state 22


State 12

  106 const_decl: KEYWORD_CONST IDENTIFIER • ASSIGN expr COLON primitive_dt SEMICOLON

    ASSIGN  shift, and go to state 23


State 13

   26 var_name: IDENTIFIER •  [KEYWORD_IN, KEYWORD_OF, ASSIGN, PLUS_ASSIGN, MINUS_ASSIGN, COLON_ASSIGN, MULT_ASSIGN, DIV_ASSIGN, MOD_ASSIGN, LPAREN, COMMA, COLON]
   27         | IDENTIFIER • LBRACKET expr RBRACKET

    LBRACKET  shift, and go to state 24

    $default  reduce using rule 26 (var_name)


State 14

    1 input: comp_decl_rec const_decl_rec var_decl_rec func_decl_rec • main_func
    3 func_decl_rec: func_decl_rec • func_decl
   10 main_func: • main_header func_body func_end
   11 main_header: • KEYWORD_DEF KEYWORD_MAIN LPAREN RPAREN COLON
   12 func_decl: • func_header func_body func_end
   13 func_header: • KEYWORD_DEF IDENTIFIER LPAREN func_param_list RPAREN COLON
   14            | • KEYWORD_DEF IDENTIFIER LPAREN func_param_list RPAREN MINUS GT var_type COLON

    KEYWORD_DEF  shift, and go to state 25

    main_func    go to state 26
    main_header  go to state 27
    func_decl    go to state 28
    func_header  go to state 29


State 15

    5 var_decl_rec: var_decl_rec var_decl •

    $default  reduce using rule 5 (var_decl_rec)


State 16

   23 var_decl: var_decl_list • COLON var_type SEMICOLON
   25 var_decl_list: var_decl_list • COMMA var_name

    COMMA  shift, and go to state 30
    COLON  shift, and go to state 31


State 17

   24 var_decl_list: var_name •

    $default  reduce using rule 24 (var_decl_list)


State 18

   26 var_name: • IDENTIFIER
   27         | • IDENTIFIER LBRACKET expr RBRACKET
   51 comp_var_name_: HASHTAG • var_name

    IDENTIFIER  shift, and go to state 13

    var_name  go to state 32


State 19

   36 comp_decl: KEYWORD_COMP IDENTIFIER COLON comp_var_decl_rec • comp_func_decl_rec KEYWORD_ENDCOMP SEMICOLON
   37 comp_func_decl_rec: ε •  [KEYWORD_DEF, KEYWORD_ENDCOMP]
   38                   | • comp_func_decl_rec comp_func_decl
   47 comp_var_decl_rec: comp_var_decl_rec • comp_var_decl
   48 comp_var_decl: • comp_var_decl_list COLON var_type SEMICOLON
   49 comp_var_decl_list: • comp_var_name_
   50                   | • comp_var_decl_list COMMA comp_var_name_
   51 comp_var_name_: • HASHTAG var_name

    HASHTAG  shift, and go to state 18

    $default  reduce using rule 37 (comp_func_decl_rec)

    comp_func_decl_rec  go to state 33
    comp_var_decl       go to state 34
    comp_var_decl_list  go to state 21
    comp_var_name_      go to state 22


State 20

   46 comp_var_decl_rec: comp_var_decl •

    $default  reduce using rule 46 (comp_var_decl_rec)


State 21

   48 comp_var_decl: comp_var_decl_list • COLON var_type SEMICOLON
   50 comp_var_decl_list: comp_var_decl_list • COMMA comp_var_name_

    COMMA  shift, and go to state 35
    COLON  shift, and go to state 36


State 22

   49 comp_var_decl_list: comp_var_name_ •

    $default  reduce using rule 49 (comp_var_decl_list)


State 23

   26 var_name: • IDENTIFIER
   27         | • IDENTIFIER LBRACKET expr RBRACKET
   34 bool_dt: • KEYWORD_TRUE
   35        | • KEYWORD_FALSE
  106 const_decl: KEYWORD_CONST IDENTIFIER ASSIGN • expr COLON primitive_dt SEMICOLON
  107 expr: • operand
  108     | • expr PLUS expr
  109     | • expr MINUS expr
  110     | • expr MULT expr
  111     | • expr DIV expr
  112     | • expr MOD expr
  113     | • expr GT expr
  114     | • expr LT expr
  115     | • expr GEQ expr
  116     | • expr LEQ expr
  117     | • expr EQ expr
  118     | • expr NEQ expr
  119     | • expr KEYWORD_AND expr
  120     | • expr KEYWORD_OR expr
  121     | • KEYWORD_NOT expr
  122     | • PLUS expr
  123     | • MINUS expr
  124     | • expr POW expr
  125     | • LPAREN expr RPAREN
  126 operand: • var_name
  127        | • func_call
  128        | • INTEGER
  129        | • FLOAT
  130        | • bool_dt
  131        | • CONST_STRING
  167 func_call: • IDENTIFIER LPAREN expr_list RPAREN

    KEYWORD_TRUE   shift, and go to state 37
    KEYWORD_FALSE  shift, and go to state 38
    IDENTIFIER     shift, and go to state 39
    INTEGER        shift, and go to state 40
    FLOAT          shift, and go to state 41
    CONST_STRING   shift, and go to state 42
    KEYWORD_NOT    shift, and go to state 43
    PLUS           shift, and go to state 44
    MINUS          shift, and go to state 45
    LPAREN         shift, and go to state 46

    var_name   go to state 47
    bool_dt    go to state 48
    expr       go to state 49
    operand    go to state 50
    func_call  go to state 51


State 24

   26 var_name: • IDENTIFIER
   27         | • IDENTIFIER LBRACKET expr RBRACKET
   27         | IDENTIFIER LBRACKET • expr RBRACKET
   34 bool_dt: • KEYWORD_TRUE
   35        | • KEYWORD_FALSE
  107 expr: • operand
  108     | • expr PLUS expr
  109     | • expr MINUS expr
  110     | • expr MULT expr
  111     | • expr DIV expr
  112     | • expr MOD expr
  113     | • expr GT expr
  114     | • expr LT expr
  115     | • expr GEQ expr
  116     | • expr LEQ expr
  117     | • expr EQ expr
  118     | • expr NEQ expr
  119     | • expr KEYWORD_AND expr
  120     | • expr KEYWORD_OR expr
  121     | • KEYWORD_NOT expr
  122     | • PLUS expr
  123     | • MINUS expr
  124     | • expr POW expr
  125     | • LPAREN expr RPAREN
  126 operand: • var_name
  127        | • func_call
  128        | • INTEGER
  129        | • FLOAT
  130        | • bool_dt
  131        | • CONST_STRING
  167 func_call: • IDENTIFIER LPAREN expr_list RPAREN

    KEYWORD_TRUE   shift, and go to state 37
    KEYWORD_FALSE  shift, and go to state 38
    IDENTIFIER     shift, and go to state 39
    INTEGER        shift, and go to state 40
    FLOAT          shift, and go to state 41
    CONST_STRING   shift, and go to state 42
    KEYWORD_NOT    shift, and go to state 43
    PLUS           shift, and go to state 44
    MINUS          shift, and go to state 45
    LPAREN         shift, and go to state 46

    var_name   go to state 47
    bool_dt    go to state 48
    expr       go to state 52
    operand    go to state 50
    func_call  go to state 51


State 25

   11 main_header: KEYWORD_DEF • KEYWORD_MAIN LPAREN RPAREN COLON
   13 func_header: KEYWORD_DEF • IDENTIFIER LPAREN func_param_list RPAREN COLON
   14            | KEYWORD_DEF • IDENTIFIER LPAREN func_param_list RPAREN MINUS GT var_type COLON

    KEYWORD_MAIN  shift, and go to state 53
    IDENTIFIER    shift, and go to state 54


State 26

    1 input: comp_decl_rec const_decl_rec var_decl_rec func_decl_rec main_func •

    $default  reduce using rule 1 (input)


State 27

    6 const_decl_rec: ε •
    7               | • const_decl_rec const_decl
   10 main_func: main_header • func_body func_end
   21 func_body: • const_decl_rec var_decl_rec stmts

    $default  reduce using rule 6 (const_decl_rec)

    const_decl_rec  go to state 55
    func_body       go to state 56


State 28

    3 func_decl_rec: func_decl_rec func_decl •

    $default  reduce using rule 3 (func_decl_rec)


State 29

    6 const_decl_rec: ε •
    7               | • const_decl_rec const_decl
   12 func_decl: func_header • func_body func_end
   21 func_body: • const_decl_rec var_decl_rec stmts

    $default  reduce using rule 6 (const_decl_rec)

    const_decl_rec  go to state 55
    func_body       go to state 57


State 30

   25 var_decl_list: var_decl_list COMMA • var_name
   26 var_name: • IDENTIFIER
   27         | • IDENTIFIER LBRACKET expr RBRACKET

    IDENTIFIER  shift, and go to state 13

    var_name  go to state 58


State 31

   23 var_decl: var_decl_list COLON • var_type SEMICOLON
   28 var_type: • primitive_dt
   29         | • IDENTIFIER
   30 primitive_dt: • KEYWORD_SCALAR
   31             | • KEYWORD_INTEGER
   32             | • KEYWORD_STR
   33             | • KEYWORD_BOOL

    KEYWORD_SCALAR   shift, and go to state 59
    KEYWORD_STR      shift, and go to state 60
    KEYWORD_BOOL     shift, and go to state 61
    KEYWORD_INTEGER  shift, and go to state 62
    IDENTIFIER       shift, and go to state 63

    var_type      go to state 64
    primitive_dt  go to state 65


State 32

   51 comp_var_name_: HASHTAG var_name •

    $default  reduce using rule 51 (comp_var_name_)


State 33

   36 comp_decl: KEYWORD_COMP IDENTIFIER COLON comp_var_decl_rec comp_func_decl_rec • KEYWORD_ENDCOMP SEMICOLON
   38 comp_func_decl_rec: comp_func_decl_rec • comp_func_decl
   39 comp_func_decl: • comp_func_header comp_func_body func_end
   41 comp_func_header: • KEYWORD_DEF IDENTIFIER LPAREN comp_func_param_list RPAREN COLON
   42                 | • KEYWORD_DEF IDENTIFIER LPAREN comp_func_param_list RPAREN MINUS GT var_type COLON

    KEYWORD_DEF      shift, and go to state 66
    KEYWORD_ENDCOMP  shift, and go to state 67

    comp_func_decl    go to state 68
    comp_func_header  go to state 69


State 34

   47 comp_var_decl_rec: comp_var_decl_rec comp_var_decl •

    $default  reduce using rule 47 (comp_var_decl_rec)


State 35

   50 comp_var_decl_list: comp_var_decl_list COMMA • comp_var_name_
   51 comp_var_name_: • HASHTAG var_name

    HASHTAG  shift, and go to state 18

    comp_var_name_  go to state 70


State 36

   28 var_type: • primitive_dt
   29         | • IDENTIFIER
   30 primitive_dt: • KEYWORD_SCALAR
   31             | • KEYWORD_INTEGER
   32             | • KEYWORD_STR
   33             | • KEYWORD_BOOL
   48 comp_var_decl: comp_var_decl_list COLON • var_type SEMICOLON

    KEYWORD_SCALAR   shift, and go to state 59
    KEYWORD_STR      shift, and go to state 60
    KEYWORD_BOOL     shift, and go to state 61
    KEYWORD_INTEGER  shift, and go to state 62
    IDENTIFIER       shift, and go to state 63

    var_type      go to state 71
    primitive_dt  go to state 65


State 37

   34 bool_dt: KEYWORD_TRUE •

    $default  reduce using rule 34 (bool_dt)


State 38

   35 bool_dt: KEYWORD_FALSE •

    $default  reduce using rule 35 (bool_dt)


State 39

   26 var_name: IDENTIFIER •  [KEYWORD_FOR, SEMICOLON, ASSIGN, PLUS_ASSIGN, MINUS_ASSIGN, COLON_ASSIGN, MULT_ASSIGN, DIV_ASSIGN, MOD_ASSIGN, KEYWORD_OR, KEYWORD_AND, EQ, NEQ, LT, LEQ, GT, GEQ, PLUS, MINUS, MULT, DIV, MOD, POW, RBRACKET, RPAREN, COMMA, COLON]
   27         | IDENTIFIER • LBRACKET expr RBRACKET
  167 func_call: IDENTIFIER • LPAREN expr_list RPAREN

    LBRACKET  shift, and go to state 24
    LPAREN    shift, and go to state 72

    $default  reduce using rule 26 (var_name)


State 40

  128 operand: INTEGER •

    $default  reduce using rule 128 (operand)


State 41

  129 operand: FLOAT •

    $default  reduce using rule 129 (operand)


State 42

  131 operand: CONST_STRING •

    $default  reduce using rule 131 (operand)


State 43
